--- a/lang/en.json
+++ b/lang/en.json
@@ -18,12 +18,37 @@
     "Tu contraseña": "Your Passoword",
     "Buscar...": "Search...",
     "Vendedor:": "Powered by",
+    "Uyy...parece que no hay nada de esta categoría": "Oops...it seems that there is nothing in this category",
+    "Vende tu primer objeto": "Sell your first item",
+    "Vuelve a la home": "Go back to home",
+    "Ver" : "See",
+    "Anuncios sin revisar" : "Unreviewed Ads",
+    "Solicitudes para revisor": "Requests for Reviewer",
+    "Construye tu mejor versión." : "Build your best version.",
+
+
+    "Inicio" : "Home",
+    "Quiénes somos": "About us",
+    "Trabaja con nosotros": "Work with us",
+    "Política de Privacidad": "Privacy policy",
+    "Términos y condiciones": "Terms and Conditions",
+    "Ropa de hombre": "Men´s clothes",
+    "Ropa de mujer" : "Women´s clothes",
+    "Ropa de niño": "Kid´s clothes",
+    "Unisex": "Unisex",
+    "Resumen mensual de las mejores novedades y promociones": "Monthly summary of the best news and promotions",
+    "Suscríbete a nuestro boletín": "Subscribe to our newsletter",
+    "Suscríbete": "Subscribe",
+    "Todos los derechos reservados.": "All rights reserved.",
+
+
+
 
 
     "Iniciar sesión": "Sign In",
     "Entrar": "Login",
     "Registrar": "Register",
-    "Salir": "Logout",
+    "Cerrar sesión": "Logout",
 
 
 
@@ -34,7 +59,13 @@
 
 
 
-    
+
+
+
+
+
+
+
    "coches": "cars",
    "motos": "motorbikes",
    "hogar": "home",
@@ -42,11 +73,9 @@
    "móviles": "smartphones",
    "ordenadores": "computers",
    "Mostrar Más": "Show More",
-   "Uyy.. parece que no hay nada": "Whoops.. seems no objects here",
-   "Vende tu primer objeto": "Sell your first item",
    "o": "or",
-   "Vuelve a la home": "Go back to home",
-   "Quienes somos": "About us",
+
+
    "Dónde estamos": "Where",
    "Nuevo Anuncio": "New Ad",
 
@@ -66,10 +95,10 @@
    "¿Ya eres de los nuestros?": "You are already a member?",
    "¡Entra ya!": "Log In",
    "Usuario": "User",
-   "Anuncio": "Ad",
+   "Anuncio": "Ad"
 
 
-   "Política de privacidad": "Privacy policy",
-   "Trabaja con nosotros": "Work with us"
+
+
 
 }
