--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
     "Anuncios sin revisar" : "Unreviewed Ads",
     "Solicitudes para revisor": "Requests for Reviewer",
     "Construye tu mejor versión." : "Build your best version.",
+    "Viste tu actitud.": "Dress your attitude.",
 
 
     "Inicio" : "Home",
