--- a/lang/en.json
+++ b/lang/en.json
@@ -27,7 +27,7 @@
     "Construye tu mejor versión." : "Build your best version.",
     "Viste tu actitud.": "Dress your attitude.",
 
-    "$category": "",
+    
 
 
     "Inicio" : "Home",
@@ -40,7 +40,7 @@
     "Ropa hombre": "Men´s clothes",
     "Ropa mujer" : "Women´s clothes",
     "Ropa niños": "Kid´s clothes",
-    "Unisex": "Unisex",
+    "Ropa unisex": "Unisex clothes",
     "Complementos": "Complements",
 
     "Resumen mensual de las mejores novedades y promociones": "Monthly summary of the best news and promotions",
