añadir carousel en welcome

--- a/lang/en.json
+++ b/lang/en.json
@@ -51,9 +51,9 @@
     "Términos y condiciones": "Terms and Conditions",
 
 
-    "Ropa hombre": "Men´s clothes",
-    "Ropa mujer" : "Women´s clothes",
-    "Ropa niños": "Kid´s clothes",
+    "Ropa hombre": "Men clothes",
+    "Ropa mujer" : "Women clothes",
+    "Ropa niños": "Kid clothes",
     "Ropa unisex": "Unisex clothes",
     "Complementos": "Complements",
 
