--- a/lang/en.json
+++ b/lang/en.json
@@ -18,6 +18,7 @@
     "Tu correo": "Your email",
     "Rechazar": "Reject",
     "Aceptar": "Accept",
+    "Eliminar":"Eliminate",
     "Comprar": "Buy",
     "Tu contraseña": "Your Password",
     "Buscar...": "Search...",
@@ -65,6 +66,7 @@
     "Tu nombre":"Your name",
     "Tu contraseña, una vez más": "Your password, one more time",
     "Crear cuenta": "Create Account",
+    "Vista previa":"Preview",
     "¿Ya eres de los nuestros?": "You are already a member?",
     "¡Entra ya!": "Log In",
 
