reordenar navbar y menu categorias

--- a/lang/en.json
+++ b/lang/en.json
@@ -21,6 +21,7 @@
     "Eliminar":"Eliminate",
     "Comprar": "Buy",
     "Tu contraseña": "Your Password",
+    "Buscar": "Search",
     "Buscar...": "Search...",
     "Vendedor:": "Powered by",
     "Uyy...parece que no hay nada de esta categoría": "Oops...it seems that there is nothing in this category",
