--- a/lang/ru.json
+++ b/lang/ru.json
@@ -15,6 +15,7 @@
     "Aceptar": "Разрешить",
     "Comprar": "Купить",
     "Tu contraseña": "Твой пароль",
+    "Buscar": "Искать",
     "Buscar...": "Искать...",
     "Vendedor:": "Продавец:",
     "Uyy...parece que no hay nada de esta categoría": "Ой...похоже ничего нет по этой категории",
