--- a/lang/en.json
+++ b/lang/en.json
@@ -44,6 +44,7 @@
     "Usuario": "User",
     "Anuncio": "Ad",
     "Imágenes":"Images",
+    "No hay imágenes":"No Pictures",
 
 
     "Inicio" : "Home",
