añadir mejoras a la navbar y finder

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,7 @@
     "Categorías": "Categories",
     "Categoría": "Category",
     "Novedades": "News",
-    "Crear anuncio": "Create ads",
+    "Crear anuncio": "Create ad",
     "Nuevo anuncio": "New Ad",
     "Revisor": "Revisor",
     "Anuncios por categoría:": "Ads by category",
