cambios de colores

--- a/lang/en.json
+++ b/lang/en.json
@@ -39,13 +39,15 @@
     "o" : "or",
     "Solicitud para el puesto de Revisor": "Application for the position of Reviewer",
     "Fecha de creación": "Creation date",
-    "No hay anuncios para revisar, vuelve más tarde, gracias!":"There are no ads to review, please come back later, thanks!",
+    "No hay anuncios para revisar, vuelve más tarde, gracias!": "There are no ads to review, please come back later, thanks!",
     "Publicado el": "Published at",
     "Por": "By",
     "Usuario": "User",
     "Anuncio": "Ad",
     "Imágenes":"Images",
     "No hay imágenes":"No Pictures",
+    "Compra y vende tu ropa de segunda mano": "Buy and sell your second-hand clothes",
+    "Últimos anuncios": "Latest ads",
 
 
     "Inicio" : "Home",
