--- a/lang/ru.json
+++ b/lang/ru.json
@@ -46,10 +46,11 @@
     "Suscríbete": "Подписаться",
     "Todos los derechos reservados.": "Все права защищены.",
 
+    "Compra y vende tu ropa de segunda mano": "Покупайте и продавайте подержанную одежду",
+    "Últimos anuncios": "Последние объявления",
 
 
 
- 
     "Iniciar sesión": "Зайти в учетную запись",
     "Entrar": "Войти",
     "Registrar": "Зарегистрироваться",
