--- a/lang/en.json
+++ b/lang/en.json
@@ -57,11 +57,11 @@
     "Términos y condiciones": "Terms and Conditions",
 
 
-    "Ropa hombre": "Men clothes",
-    "Ropa mujer" : "Women clothes",
-    "Ropa niños": "Kid clothes",
-    "Ropa unisex": "Unisex clothes",
-    "Complementos": "Complements",
+    "Hombre": "Men clothes",
+    "Mujer" : "Women clothes",
+    "Niños": "Kid clothes",
+    "Bolsos": "Handbags",
+    "Accesorios": "Accessories",
 
     "Resumen mensual de las mejores novedades y promociones": "Monthly summary of the best news and promotions",
     "Suscríbete a nuestro boletín": "Subscribe to our newsletter",
