--- a/lang/en.json
+++ b/lang/en.json
@@ -48,6 +48,12 @@
     "No hay imágenes":"No Pictures",
     "Compra y vende tu ropa de segunda mano": "Buy and sell your second-hand clothes",
     "Últimos anuncios": "Latest ads",
+    "Que vas a vender hoy?":"What are you going to sell today?",
+    "Sube tu anuncio":"Upload your ad",
+    "Cual es su precio?":"What is your price?",
+    "Como es el producto:":"How is the product:",
+    "Elige una categoría :":"Choose a category :",
+    "Elige una fotografía :":"Choose a photograph:",
 
 
     "Inicio" : "Home",
