vista search y paginacion

--- a/lang/en.json
+++ b/lang/en.json
@@ -24,7 +24,7 @@
     "Buscar": "Search",
     "Buscar...": "Search...",
     "Vendedor:": "Powered by",
-    "Uyy...parece que no hay nada de esta categoría": "Oops...it seems that there is nothing in this category",
+    "Uy...parece que no hay nada de esta categoría": "Oops...it seems that there is nothing in this category",
     "Vende tu primer objeto": "Sell your first item",
     "Vuelve a la home": "Go back to home",
     "Ver" : "See",
