--- a/lang/ru.json
+++ b/lang/ru.json
@@ -18,7 +18,7 @@
     "Buscar": "Искать",
     "Buscar...": "Искать...",
     "Vendedor:": "Продавец:",
-    "Uyy...parece que no hay nada de esta categoría": "Ой...похоже ничего нет по этой категории",
+    "Uy...parece que no hay nada de esta categoría": "Ой...похоже ничего нет по этой категории",
     "Vende tu primer objeto": "Поставь на продажу свой первый товар",
     "Vuelve a la home": "Вернуться на главную страницу",
     "Ver" : "Просмотреть",
