--- a/lang/en.json
+++ b/lang/en.json
@@ -54,6 +54,7 @@
     "Como es el producto:":"How is the product:",
     "Elige una categoría :":"Choose a category :",
     "Elige una fotografía :":"Choose a photograph:",
+    "Calzado":"Footwear",
 
 
     "Inicio" : "Home",
