--- a/lang/en.json
+++ b/lang/en.json
@@ -99,11 +99,13 @@
 
    "Mostrar Más": "Show More",
    "Dónde estamos": "Where",
-   "Nuevo Anuncio": "New Ad"
-
-
-
-
-
-   
+   "Nuevo Anuncio": "New Ad",
+   "Contenido pornográfico": "Porn",
+    "Erótico": "Erotic",
+    "Degradante": "Degrading",
+    "Médico": "Medical",
+    "Violencia": "Violence",
+    "Etiquetas": "Labels",
+    "Borrar": "Delete",
+   "Otros articulos de esta categoría:" :"Other articles of this category"
 }
