--- a/lang/ru.json
+++ b/lang/ru.json
@@ -16,7 +16,7 @@
     "Tu correo": "Твой email",
     "Rechazar": "Отклонить",
     "Aceptar": "Разрешить",
-    "Eliminar": "",
+    "Eliminar": "Удалить",
     "Comprar": "Купить",
     "Tu contraseña": "Твой пароль",
     "Buscar": "Искать",
@@ -30,20 +30,20 @@
     "Solicitudes para revisor": "Запросы на роль ревизора",
     "Construye tu mejor versión." : "Создай себя еще лучше.",
     "Viste tu actitud.": "Приобразись.",
-    "Vende algo interesante": "sell something interesting",
-    "o" : "or",
-    "Solicitud para el puesto de Revisor": "Application for the position of Reviewer",
-    "Fecha de creación": "Creation date",
-    "No hay anuncios para revisar, vuelve más tarde, gracias!": "There are no ads to review, please come back later, thanks!",
-    "Imágenes":"Images",
-    "No hay imágenes":"No Pictures",
-    "Que vas a vender hoy?":"What are you going to sell today?",
-    "Sube tu anuncio":"Upload your ad",
-    "Cual es su precio?":"What is your price?",
-    "Como es el producto:":"How is the product:",
-    "Elige una categoría :":"Choose a category :",
-    "Elige una fotografía :":"Choose a photograph:",
-    "Calzado":"Footwear",
+    "Vende algo interesante": "Продай что-нибудь интересное",
+    "o" : "или",
+    "Solicitud para el puesto de Revisor": "Заявка на позицию ревизора",
+    "Fecha de creación": "Дата создания",
+    "No hay anuncios para revisar, vuelve más tarde, gracias!": "Больше нет обЪявлений на проверку, зайди чуть позже, спасибо!",
+    "Imágenes": "Фотографии",
+    "No hay imágenes": "Нет изображений",
+    "Que vas a vender hoy?": "Что ты выставишь на продажу сегодня?",
+    "Sube tu anuncio": "Загрузить объявление",
+    "Cual es su precio?": "Цена?",
+    "Como es el producto:": "Описание товара:",
+    "Elige una categoría :": "Выбери категорию :",
+    "Elige una fotografía :": "Выбери фотографию :",
+    
     
  
     "Inicio" : "Главная",
@@ -55,7 +55,7 @@
     "Hombre": "Мужская одежда",
     "Mujer" : "Женская одежда",
     "Niños": "Детская одежда",
-    "Bolsos": "...",
+    "Calzado": "Обувь",
     "Accesorios": "Акссесуары",
  
     "Resumen mensual de las mejores novedades y promociones": "Каталог лучших предложений и новинок за месяц",
@@ -90,5 +90,14 @@
    "¿Ya eres de los nuestros?": "Уже являешься участником нашего сообщества?",
    "¡Entra ya!": "Войти!",
    "Usuario": "Пользователь",
-   "Anuncio": "Объявление"
+   "Anuncio": "Объявление",
+
+   "Contenido pornográfico": "Порнография",
+    "Erótico": "Эротика",
+    "Degradante": "Унижающее",
+    "Médico": "Медицинское",
+    "Violencia": "Насилие",
+    "Etiquetas": "Ярлыки",
+    "Borrar": "Удалить",
+    "Otros articulos de esta categoría:": "Другие товары по данной категории"
 }
