--- a/lang/en.json
+++ b/lang/en.json
@@ -54,6 +54,7 @@
     "Elige una categoría :":"Choose a category :",
     "Elige una fotografía :":"Choose a photograph:",
     "Calzado":"Footwear",
+    "Vender Anuncio":"Sell Ad",
 
 
     "Inicio" : "Home",
