--- a/lang/en.json
+++ b/lang/en.json
@@ -8,7 +8,7 @@
     "Crear anuncio": "Create ad",
     "Nuevo anuncio": "New Ad",
     "Revisor": "Revisor",
-    "Anuncios por categoría:": "Ads by category",
+    "Anuncios por categoría:": "Ads by category:",
     "Título:": "Title",
     "Título": "Title",
     "Precio:": "Price",
