--- a/lang/ru.json
+++ b/lang/ru.json
@@ -6,7 +6,7 @@
     "Novedades": "Новинки",
     "Crear anuncio": "Создать объявление",
     "Revisor": "Ревизор",
-    "Anuncios por categoría:": "Объявления по категории",
+    "Anuncios por categoría:": "Объявления по категории:",
     "Título": "Заголовок",
     "Título:": "Заголовок",
     "Precio": "Цена",
