--- a/lang/en.json
+++ b/lang/en.json
@@ -55,6 +55,7 @@
     "Elige una fotografía :":"Choose a photograph:",
     "Calzado":"Footwear",
     "Vender Anuncio":"Sell Ad",
+    "Tu carrito está vacío":"Your cart is empty",
 
 
     "Inicio" : "Home",
@@ -116,7 +117,7 @@
     "Tus anuncios favoritos:": "Your favorite ads:",
     "Anuncio marcado como favorito": "Ad marked as favorite",
     "Revisores de BestChoice": "Revisors of BestChoice",
- 
+
     "Nombre": "Name",
     "Anuncios revisados": "Ckecked ads",
     "Desactivar revisor": "Deactivate revisor",
